@@ -1,3 +1,7 @@
+1999-10-13  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* terminal.c (rl_resize_terminal): Import from readline 4.0.
+
 Thu May 27 21:47:26 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* histfile.c [__CYGWIN__]: Define O_BINARY if not already defined.
